--- a/paris_relay.X/nbproject/Makefile-genesis.properties
+++ b/paris_relay.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Sun Mar 01 18:20:36 CET 2015
-Release.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=7061a037ce3d4c0960fd4b4b5b95a84d
-Relocated.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=7061a037ce3d4c0960fd4b4b5b95a84d
-conf.ids=Release,Relocated
+#Tue Mar 24 15:47:35 CET 2015
+Relocated.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=8e4b1923d51ddb95d5dd2242a6e4ff4e
+Debug.languagetoolchain.version=1.21
+conf.ids=Debug,Relocated
 Relocated.languagetoolchain.version=1.21
 Relocated.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d73bd66f11f6ea6d7c6dc1b9c424aa07
-Release.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
-Release.languagetoolchain.version=1.21
+Debug.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=14bfd24937c194037d3fb4871f06392b
+Debug.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=8e4b1923d51ddb95d5dd2242a6e4ff4e
 host.platform=windows
