Fixed compile error

--- a/paris_relay.X/nbproject/Makefile-genesis.properties
+++ b/paris_relay.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,12 @@
 #
-#Tue Mar 24 15:47:35 CET 2015
-Relocated.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=8e4b1923d51ddb95d5dd2242a6e4ff4e
+#Tue May 19 17:23:25 CEST 2015
+Relocated.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=ddd105264688c307e9df7a6eaef30944
 Debug.languagetoolchain.version=1.21
 conf.ids=Debug,Relocated
 Relocated.languagetoolchain.version=1.21
+configurations-xml=976b1aac1452f4459a1838a6b1cb063c
 Relocated.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
 Debug.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=14bfd24937c194037d3fb4871f06392b
-Debug.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=8e4b1923d51ddb95d5dd2242a6e4ff4e
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e9e394344dac8fa7117638c068420ddd
+Debug.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=ddd105264688c307e9df7a6eaef30944
 host.platform=windows
