--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,19 @@
 /test/flilter_test/ipch/flilter_test-f4697474/*.ipch
 /paris_relay.X/build/Debug/production/_ext/1472/*.p1
 /paris_relay.X/build/Debug/production/_ext/1472/*.d
+/paris_relay.X/build/Debug/debug/_ext/1472/*.p1
+/paris_relay.X/build/Debug/debug/_ext/1472/*.d
+/paris_relay.X/build/Debug/debug/_ext/1472/*.pre
+/paris_relay.X/build/Debug/debug/_ext/1554471087/*.p1
+/paris_relay.X/build/Debug/debug/_ext/1554471087/*.d
+/paris_relay.X/build/Debug/debug/_ext/1554471087/*.pre
+/paris_relay.X/build/Debug/debug/_ext/1935753226/*.d
+/paris_relay.X/build/Debug/debug/_ext/1935753226/*.p1
+/paris_relay.X/build/Debug/debug/_ext/1935753226/*.pre
+/paris_relay.X/dist/Debug/debug/*.cmf
+/paris_relay.X/dist/Debug/debug/*.hxl
+/paris_relay.X/dist/Debug/debug/*.lst
+/paris_relay.X/dist/Debug/debug/*.map
+/paris_relay.X/dist/Debug/debug/*.rlf
+/paris_relay.X/dist/Debug/debug/*.sdb
+/paris_relay.X/dist/Debug/debug/*.sym
