Removed some junk

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,35 @@
 /eagle/*.b#9
 /eagle/*.b#2
 /eagle/*.b#3
+/eagle/*.b#5
+/eagle/*.b#6
+/eagle/*.b#7
+/eagle/*.b#8
+/eagle/*.b#9
+/eagle/*.b#2
+/eagle/*.b#3
+/eagle/*.b#4
+/eagle/*.s#5
+/eagle/*.s#6
+/eagle/*.s#8
+/eagle/*.s#9
+/eagle/*.s#1
+/eagle/*.s#2
+/eagle/*.s#3
+/eagle/*.s#4
+/eagle/*.s#6
+/eagle/*.s#8
+/eagle/*.s#9
+/eagle/*.b#2
+/eagle/*.b#3
+/eagle/*.b#4
+/eagle/*.b#5
+/eagle/*.b#6
+/eagle/*.b#7
+/eagle/*.b#8
+/eagle/*.b#9
+/eagle/*.s#1
+/eagle/*.s#2
+/eagle/*.s#3
+/eagle/*.s#4
+/eagle/*.s#5
