--- a/paris_relay.X/nbproject/Makefile-genesis.properties
+++ b/paris_relay.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,18 @@
 #
-#Sun Dec 20 16:40:51 CET 2015
-Relocated.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=963f069511a8ddaa8b86cc38b368245c
-Debug.languagetoolchain.version=1.21
-conf.ids=Debug,Relocated
-Relocated.languagetoolchain.version=1.21
-configurations-xml=f181c2b73707bbd397b1ac94edd55add
-Relocated.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
-Debug.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f034478aa60d3a123c4e097fb2922dfc
-Debug.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=963f069511a8ddaa8b86cc38b368245c
-host.platform=windows
+#Tue Mar 08 18:26:39 CET 2016
+Debug_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
+Relocated_2580.languagetoolchain.version=1.21
+Debug_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+Relocated_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
+conf.ids=Debug_2580,Relocated_2580,Relocated_26K80,Debug_26K80
+Relocated_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
+Debug_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+Debug_26K80.languagetoolchain.version=1.21
+configurations-xml=6dbaa94a8418cded80e81fc0f13b7276
+Debug_2580.languagetoolchain.version=1.21
+Relocated_26K80.languagetoolchain.version=1.21
+Relocated_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
+Relocated_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+host.platform=linux
+Debug_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
