--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@
 /eagle/*.s#5
 /paris_relay.X/build/Debug_26K80/
 /paris_relay.X/dist/Debug_26K80/
+/paris_relay.X/build/Relocated_2580/
+/paris_relay.X/dist/Relocated_2580/
