--- a/paris_relay.X/nbproject/Makefile-genesis.properties
+++ b/paris_relay.X/nbproject/Makefile-genesis.properties
@@ -1,22 +1,18 @@
 #
-<<<<<<< HEAD
-#Wed Mar 23 16:01:35 CET 2016
-=======
-#Wed Mar 23 10:37:09 CET 2016
->>>>>>> 1b863185f301b088f58cab01e81aa48fab34fde0
+#Wed Mar 23 16:48:32 CET 2016
 Debug_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
 Relocated_2580.languagetoolchain.version=1.21
-Debug_2580.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
+Debug_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
 Relocated_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
 conf.ids=Debug_2580,Relocated_2580,Relocated_26K80,Debug_26K80
 Relocated_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
-Debug_26K80.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
+Debug_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
 Debug_26K80.languagetoolchain.version=1.21
-configurations-xml=7ed32e08f490ab821d3465b7d751c1f0
+configurations-xml=06b83453ad04c0b8d774ed92b0addacd
 Debug_2580.languagetoolchain.version=1.21
 Relocated_26K80.languagetoolchain.version=1.21
-Relocated_2580.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
+Relocated_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
-Relocated_26K80.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.21\\bin
-host.platform=windows
+Relocated_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+host.platform=linux
 Debug_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
