--- a/paris_relay.X/nbproject/Makefile-genesis.properties
+++ b/paris_relay.X/nbproject/Makefile-genesis.properties
@@ -1,18 +1,22 @@
 #
-#Tue May 17 17:10:12 CEST 2016
-Debug_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
-Relocated_2580.languagetoolchain.version=1.21
-Debug_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
-Relocated_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
-conf.ids=Debug_2580,Relocated_2580,Relocated_26K80,Debug_26K80
-Relocated_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
-Debug_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+#Fri May 15 10:55:44 CEST 2020
 Debug_26K80.languagetoolchain.version=1.21
-configurations-xml=06b83453ad04c0b8d774ed92b0addacd
-Debug_2580.languagetoolchain.version=1.21
-Relocated_26K80.languagetoolchain.version=1.21
-Relocated_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
+Relocated_26K80.Pack.dfplocation=/opt/microchip/mplabx/v5.35/packs/Microchip/PIC18F-K_DFP/1.3.84
+Relocated_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=a3a5a28eafeb3705e0e24f42f2fe6c7a
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5db0f4d6bbe0ec2a1f1096ccfb9d7ad3
+Debug_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+Relocated_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=a3a5a28eafeb3705e0e24f42f2fe6c7a
 Relocated_26K80.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+Debug_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=a3a5a28eafeb3705e0e24f42f2fe6c7a
+Relocated_2580.languagetoolchain.version=1.21
+Relocated_26K80.languagetoolchain.version=1.21
+configurations-xml=71373b5205d95b2715035a14f4efe7ef
+Debug_26K80.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=a3a5a28eafeb3705e0e24f42f2fe6c7a
+Relocated_2580.Pack.dfplocation=/opt/microchip/mplabx/v5.35/packs/Microchip/PIC18Fxxxx_DFP/1.2.26
+Debug_26K80.Pack.dfplocation=/opt/microchip/mplabx/v5.35/packs/Microchip/PIC18F-K_DFP/1.3.84
 host.platform=linux
-Debug_2580.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=12edf07df11dc3b48011abb2bbd51a8e
+Debug_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
+conf.ids=Debug_2580,Relocated_2580,Relocated_26K80,Debug_26K80
+Debug_2580.languagetoolchain.version=1.21
+Debug_2580.Pack.dfplocation=/opt/microchip/mplabx/v5.35/packs/Microchip/PIC18Fxxxx_DFP/1.2.26
+Relocated_2580.languagetoolchain.dir=/opt/microchip/xc8/v1.21/bin
